istio/peer-authentication-frontend.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: frontend-permissive
  namespace: app
spec:
  selector:
    matchLabels:
      app: frontend
  mtls:
    mode: PERMISSIVE
