istio/allow-backend-to-postgres.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-backend-to-postgres
  namespace: app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/app/sa/backend
