istio/allow-postgres-exporter-to-postgres.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-postgres-exporter-to-postgres
  namespace: app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/app/sa/postgres-exporter-prometheus-postgres-exporter
